--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+body
+{
+ background-color: #0b1120;
+}
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -14,7 +19,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
